--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-    <div class="main">
+    <div ng-app="main" ng-controller="mainController" class="main">
         <div class="time">
-            <p>30:05</p>
+            <p id="time" ng-bind="countdown">00:00</p>
         </div>
         <div class="logo"></div>
         <div class="card-set">
-            <div class="card" style="background-color: coral;">3</div>
-            <div class="card" style="background-color:cornflowerblue;">4</div>
-            <div class="card" style="background-color:darkseagreen;">7</div>
-            <div class="card" style="background-color:moccasin;">1</div>
+            <div class="card card-1">3</div>
+            <div class="card card-2">4</div>
+            <div class="card card-3">7</div>
+            <div class="card card-4">1</div>
         </div>
         <div class="answer-box">
             <h3>MAKE IT 24 !</h3>
-            <input type="text" name="answer" id="answer" placeholder="Your Answer">
+            <input type="text" maxlength="13" name="answer" id="answer" placeholder="Your Answer">
         </div>
         <div class="result-box"></div>
     </div>
